# StudyCmake

./: .gitignore  README.md
CMD0/src/: CMakeLists.txt  tutorial.cxx
CMD1/src/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
CMD2/src/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
CMD3/src/: CMakeLists.txt
CMD3/src/MathFunctions/: mysqrt.h
CMD4/src/MathFunctions/: CMakeLists.txt  mysqrt.cxx
